--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "sirv-cli": "^0.4.4",
-    "svelte-spa-router": "^2.2.0"
+    "svelte-spa-router": "^2.2.0",
+    "svelte-web3": "^0.1.4"
   }
 }
