--- a/package.json
+++ b/package.json
@@ -7,17 +7,19 @@
     "start": "sirv public"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^12.0.0",
-    "@rollup/plugin-node-resolve": "^8.0.0",
+    "@rollup/plugin-commonjs": "^13.0.0",
+    "@rollup/plugin-node-resolve": "^8.0.1",
     "fa-svelte": "^3.1.0",
-    "rollup": "^2.3.4",
-    "rollup-plugin-livereload": "^1.0.0",
-    "rollup-plugin-svelte": "^5.0.3",
-    "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.23.0"
+    "rollup": "^2.16.1",
+    "rollup-plugin-livereload": "^1.3.0",
+    "rollup-plugin-svelte": "^5.2.2",
+    "rollup-plugin-terser": "^5.3.0",
+    "svelte": "^3.23.2"
   },
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "axios": "^0.19.2",
     "ethereum-blockies": "^0.1.1",
     "randomcolor": "^0.5.4",
     "sirv-cli": "^0.4.4",
